--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+#数据库连接配置
+src/main/resouces/mabatis-config.xml
+
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
